page overflow fix + minor JS fixes

--- a/css/base.css
+++ b/css/base.css
@@ -18,16 +18,15 @@ a:hover {
     color: blue;
 }
 body {
-    background-color: black;
-    color: white;
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
 }
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Bebas Neue', Arial, Helvetica, sans-serif;
+body.homepage {
+    background-color: black;
+    color: white;
+    overflow: hidden;
 }
 #wrapper-outter {
     width: 100%;
-    background-color: black;
 }
 .wrapper {
     max-width: 1024px;
